<resources>
    <string name="app_name">Sunshine</string>


    <string name="action_settings">Settings</string>
    <string name="action_map">Map Location</string>
    <string name="action_share">Share</string>


    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">SettingsActivity</string>


    <string name="pref_location_lable">Location</string>
    <string name="pref_location_key">location</string>
    <string name="pref_location_default">94043</string>

    <string name="pref_units_lable">Temperature Units</string>

    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>

    <string name="pref_units_key">temp</string>
    <string name="pref_units_default">metric</string>





</resources>
